--- a/frontend/project3/src/index.css
+++ b/frontend/project3/src/index.css
@@ -4,6 +4,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --navbar-height: 4rem;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
