--- a/frontend/project3/src/components/styles/Modal.module.css
+++ b/frontend/project3/src/components/styles/Modal.module.css
@@ -42,8 +42,9 @@
 .content {
   padding: 1rem;
   color: black;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 50vh;
+  min-height: 10vh;
 }
 
 .actions {
