--- a/frontend/project3/src/components/styles/Modal.module.css
+++ b/frontend/project3/src/components/styles/Modal.module.css
@@ -11,20 +11,20 @@
 .board {
   background: rgba(255, 255, 255);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .modal {
   position: fixed;
-  top: 10vh;
-  left: 10%;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
   width: 80%;
-  z-index: 100;
+  z-index: 30;
   max-height: 80vh;
 }
 
-.header,
-.errorHeader {
+.header {
   padding: 1rem;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
